--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
